# Sample_AVAPIs_Client

./: import-summary.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFPushStream.cpp  FFPushStream.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayProxy.cpp  IPlayProxy.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPushStream.cpp  IPushStream.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XListener.cpp  XListener.h  (+11 more)
app/src/main/cpp/utils/: OpenSL_ES_Util.h
app/src/main/java/com/common/jniFun/: CommHandler.java  MyHandler.java  PlayControl.java
app/src/main/java/com/common/view/: XPlay.java
app/src/main/java/com/tutk/sample/AVAPI/: CameraSurfaceView.java  Client.java  MainActivity.java
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
captures/: com.cvte.afsyb.jingzi_2018.11.19_16.45.li  com.tutk.sample.AVAPI_2018.11.19_16.40-1.li  com.tutk.sample.AVAPI_2018.11.19_16.40.li
